resolved images issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,13 @@
   <div class="row r-items">
     <ul class="c-items">
       <li class="c-item" [ngClass]="{'show-img': imagesArray[0].showImg}">
-        <img src="../assets/images/header01.jpg">
+        <img src="assets/images/header01.jpg">
       </li>
       <li class="c-item" [ngClass]="{'show-img': imagesArray[1].showImg}">
-        <img src="../assets/images/header02.jpg">
+        <img src="assets/images/header02.jpg">
       </li>
       <li class="c-item" [ngClass]="{'show-img': imagesArray[2].showImg}">
-        <img src="../assets/images/header03.jpg">
+        <img src="assets/images/header03.jpg">
       </li>
     </ul>
   </div>
