resolved images issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,9 @@
   </div>
   <div class="row r-numbers">
     <div class="c-numbers">
-      <div class="c-number" (click)="changeSlide(0)" [ngClass]="{'selected-img': imagesArray[0].showImg}"><img src="../assets/images/header01.jpg"><span>1</span></div>
-      <div class="c-number" (click)="changeSlide(1)" [ngClass]="{'selected-img': imagesArray[1].showImg}"><img src="../assets/images/header02.jpg"><span>2</span></div>
-      <div class="c-number" (click)="changeSlide(2)" [ngClass]="{'selected-img': imagesArray[2].showImg}"><img src="../assets/images/header03.jpg"><span>3</span></div>
+      <div class="c-number" (click)="changeSlide(0)" [ngClass]="{'selected-img': imagesArray[0].showImg}"><img src="assets/images/header01.jpg"><span>1</span></div>
+      <div class="c-number" (click)="changeSlide(1)" [ngClass]="{'selected-img': imagesArray[1].showImg}"><img src="assets/images/header02.jpg"><span>2</span></div>
+      <div class="c-number" (click)="changeSlide(2)" [ngClass]="{'selected-img': imagesArray[2].showImg}"><img src="assets/images/header03.jpg"><span>3</span></div>
     </div>
   </div>
   <!-- <div class="clip-container">
